# lct_hack

./: .gitignore  README.md  clusters_response.json  docker-compose.yaml  pyproject.toml  response_1718570570259.csv  test_input.csv
common/api/: lifespan.py
common/db/: db.py  model.py
common/domain/: schema.py
config/: postgres.env
data/postgres/base/1/: 2619
data/postgres/base/16384/: 1247  1249  1259  24581  24582  24589  24590  24597  24598  24605  24613  24619  24625  24631  24637  2579  2606  2608  2610  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  (+4 more)
data/postgres/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/postgres/pg_stat/: db_0.stat  db_16384.stat  global.stat
docker/postgres/: Dockerfile  db-init.sh
lct_app/: Dockerfile
lct_app/api/: main.py  router.py
lct_app/api/config/: gunicorn.conf.py  sgi_config.py
lct_app/sometestdata/: marked_test_input.csv  База по промышленным образцам.csv  Инженер_аппликатор_медицинское_оборудование_13_Июня_2024.docx
notebooks/: dd.py  explore.ipynb  missing.ipynb  new_polars.ipynb  new_testing.ipynb  pandas_testing.ipynb  parse.ipynb  sel.py  testing.ipynb
src/common/api/: dependencies.py  lifespan.py
src/common/db/: config.py  model.py
src/common/domain/: schema.py
src/common/utils/: debug.py
src/lct_app/: Dockerfile  __init__.py  requirements.txt
src/lct_app/api/: router.py  testing.py
src/lct_app/embeddings/: main.py
src/streamlit/: app.py  main_page.py  requirements.txt
src/streamlit/utils/: data_processing.py  file_upload.py  plottling.py
(+1 files in other folders)
