[tool.poetry]
name = "lct-hack"
version = "0.1.0"
description = ""
authors = ["Egor Sidorov <sidorov.egor.main@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
requests = "^2.32.3"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
streamlit-agraph = "^0.0.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
